docs(F-01/testable-domain-harness): utrwalenie konwencji testowej i zwrot na test-first (p4)
Powód: Fazy 1-3 wypracowały konwencję testową — przypięty runner, dwie
zweryfikowane biblioteki, bramka psucia — ale żyła ona wyłącznie w planie
zmiany i w pamięci sesji, więc każdy kolejny slice odtwarzałby ją od zera.
Przy okazji utrwalania zmienia się sama konwencja: domyślną kolejnością
jest czerwony test → implementacja → zielony test. Test pisany przed kodem
dowodzi zdolności do czerwieni za darmo, zamiast wymagać osobnego kroku
z psuciem działającej rzeczy.

Efekt: test-plan.md przestaje kłamać o stanie rolloutu i o stacku, a §6.1
i §6.3 niosą przepisy na tyle konkretne, że nowy test da się z nich napisać
bez wracania do rozmowy. Dwie lekcje wchodzą do rejestru czytanego przez
frame/research/plan/implement/review. Zestaw testów bez zmian: 15 testów,
BUILD SUCCESS.

- ADD: test-plan.md §1 zasada #4 — test-first domyślnie; test po
  implementacji wyłącznie jako jawna decyzja zapisana w planie zmiany
- ADD: test-plan.md §6 wstęp — driverem planu jest /10x-tdd, a
  /10x-implement zostaje dla faz nie do poprowadzenia test-first
- ADD: test-plan.md §6.3 — przepis na test UI: warunki uruchomienia,
  szkielet przez wspólny punkt bootstrapu, bariera zdarzeń, wyciąganie
  wyjątków z handlerów, flagi modułowe, wykluczenie OSGi
- MOD: test-plan.md §6.1 — bramka gotowości rozdzielona na dwie drogi;
  w Javie błąd kompilacji nie jest jeszcze czerwonym testem
- MOD: test-plan.md §3 — Fazy 1 i 2 rolloutu jako zrealizowane i scalone,
  z notą, że ziarno domeny nie powstało, więc ryzyka #1 i #5 czekają na S-01
- MOD: test-plan.md §4 — wersje wprost z pom.xml (surefire 3.5.5,
  AssertJ 3.27.7, TestFX 4.0.18, Hamcrest 2.1, Maven 3.9.11, compiler
  3.15.0); usunięte nieaktualne "brak surefire" i testy na classpath
- ADD: lessons.md — lekcja o dowodzie czerwieni, z test-first na czele
- ADD: lessons.md — lekcja o kanarku frameworka, tracącym rację bytu
  z chwilą pojawienia się pierwszego 